--- a/game.html
+++ b/game.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -9,78 +9,82 @@
     <title>Tic Tac Toe</title>
 
     <link href="https://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-	<style>
-		.tic-btn { display : inline-block; font-weight : 400; line-height : 1.25; text-align : center; white-space : nowrap; vertical-align : middle; -webkit-user-select : none; -moz-user-select : none; -ms-user-select : none; user-select : none; -webkit-transition : all .2s ease-in-out; -o-transition : all .2s ease-in-out; transition : all .2s ease-in-out; }
-		.tic-btn:hover { background : rgba(0, 43, 75, 0.40) }
-		.tic-btn-sec { color : #292b2c; background-color : #fff; border-color : #ccc; }
-		.tic-hovered { background-color : rgba(0, 43, 75, 0.10); }
-		.tic-hovered-red { background-color : rgba(255, 0, 0, 0.22); }
-		.fl { float : left; }
-		.db { display : inline; }
-		
-		.text { height: 100%; border: 1px solid #c8c8c8; width: 100%; padding-top: 30%; font-size: 16px; }
-		
-		.pointer { cursor:pointer; }
-		.na { cursor:not-allowed !important; }
-		.redBg { background-color: #ff2121 !important; }
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 
-		.whiteBgAnimated {
-			background-color                 : white !important;
-			background-image                 : none !important;
-			-webkit-transition               : background-color 1000ms linear;
-			-moz-transition                  : background-color 1000ms linear;
-			-o-transition                    : background-color 1000ms linear;
-			-ms-transition                   : background-color 1000ms linear;
-			transition                       : background-color 1000ms linear;
-			-webkit-animation-direction      : alternate;
-			animation-direction              : alternate;
-			-webkit-animation-iteration-count: 2;
-			animation-iteration-count        : 2;
-		}
-	</style>
-  </head>
+    <style>
+        .toggle-handle { background : #FFFFFF; }
+        .toggle-off { background : #D9D9D9; }
+        .tic-btn { display : inline-block; font-weight : 400; line-height : 1.25; text-align : center; white-space : nowrap; vertical-align : middle; -webkit-user-select : none; -moz-user-select : none; -ms-user-select : none; user-select : none; -webkit-transition : all .2s ease-in-out; -o-transition : all .2s ease-in-out; transition : all .2s ease-in-out; }
+        .tic-btn:hover { background : rgba(0, 43, 75, 0.40) }
+        .tic-btn-sec { color : #292B2C; background-color : #FFFFFF; border-color : #CCCCCC; }
+        .tic-hovered { background-color : rgba(0, 43, 75, 0.10); }
+        .tic-hovered-red { background-color : rgba(255, 0, 0, 0.22); }
+        .fl { float : left; }
+        .db { display : inline; }
+        .text { height : 100%; border : 1px solid #C8C8C8; width : 100%; padding-top : 30%; font-size : 16px; }
+        .pointer { cursor : pointer; }
+        .na { cursor : not-allowed !important; }
+        .redBg { background-color : #FF2121 !important; }
+        .whiteBgAnimated {
+            background-color                  : white !important;
+            background-image                  : none !important;
+            -webkit-transition                : background-color 1000ms linear;
+            -moz-transition                   : background-color 1000ms linear;
+            -o-transition                     : background-color 1000ms linear;
+            -ms-transition                    : background-color 1000ms linear;
+            transition                        : background-color 1000ms linear;
+            -webkit-animation-direction       : alternate;
+            animation-direction               : alternate;
+            -webkit-animation-iteration-count : 2;
+            animation-iteration-count         : 2;
+        }
+    </style>
+</head>
 
-  <body>
-    <div class="container">
-		<br>
-		<div class="btn-toolbar justify-content-between" role="toolbar">
-			<div class="btn-group mr-2" role="group" aria-label="New Session">
-				<button class="btn btn-secondary" disabled>no session</button>
-				<button type="button" class="btn btn-secondary" id="newSession">New Session</button>
-			</div>
-			<div class="btn-group mr-2" role="group" aria-label="Users">
-				<button type="button" disabled class="btn btn-secondary"><span id="myUsername">You</span> <span class="badge badge-default">0</span></button>
-				<button type="button" disabled class="btn btn-secondary">Opponent <span class="badge badge-default">0</span></button>
-			</div>
-		</div>
-		<hr>
-		<br>
-		<div class="row">
-			<div id="board" class="pointer" style="width: 100%; height: 500px;"></div>
-		</div>
+<body>
+<div class="container">
+    <br>
+    <div class="btn-toolbar justify-content-between" role="toolbar">
+        <div class="btn-group mr-2" role="group" aria-label="New Session">
+            <span style="padding: 5px;">Game:</span> <input type="checkbox" id="toggle-event" data-toggle="toggle">
+        </div>
+        <div class="btn-group mr-2" role="group" aria-label="Users">
+            <button type="button" disabled class="btn btn-secondary"><span id="myUsername">You</span> <span class="badge badge-default">0</span></button>
+            <button type="button" disabled class="btn btn-secondary">Opponent <span class="badge badge-default">0</span></button>
+        </div>
     </div>
+    <hr>
+    <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%; height: 20px;"><span>Looking for a game..</span></div>
+    </div>
+    <br>
+    <div class="row">
+        <div id="board" class="pointer" style="width: 100%; height: 500px;"></div>
+    </div>
+</div>
 
-    <script src="//vehiclehistory-yzrzbhxxt2s5c.netdna-ssl.com/common/js/jquery-1.11.3.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" crossorigin="anonymous"></script>
-    <script src="https://v4-alpha.getbootstrap.com/dist/js/bootstrap.min.js"></script>
-    <script src="https://v4-alpha.getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
-	
-	<script src="https://www.gstatic.com/firebasejs/3.6.7/firebase.js"></script>
-	<script>
-	  // Initialize Firebase
-	  var config = {
-		apiKey           : "AIzaSyDSIPXFBGhvzLaRTMLvWu0l-UBqnfL1jRs",
-		authDomain       : "tic-tac-toe-a06cb.firebaseapp.com",
-		databaseURL      : "https://tic-tac-toe-a06cb.firebaseio.com",
-		storageBucket    : "tic-tac-toe-a06cb.appspot.com",
-		messagingSenderId: "248671105051"
-	  };
-	  firebase.initializeApp(config);
-	</script>
+<script src="//vehiclehistory-yzrzbhxxt2s5c.netdna-ssl.com/common/js/jquery-1.11.3.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" crossorigin="anonymous"></script>
+<script src="//v4-alpha.getbootstrap.com/dist/js/bootstrap.min.js"></script>
+<script src="//v4-alpha.getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+<script src="//gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 
-    <script src="/js/functions.js"></script>
-    <script src="/js/logic.js"></script>
-    <script src="/js/script.js"></script>
-  </body>
+<script src="//www.gstatic.com/firebasejs/3.6.7/firebase.js"></script>
+<script>
+    // Initialize Firebase
+    var config = {
+        apiKey           : "AIzaSyDSIPXFBGhvzLaRTMLvWu0l-UBqnfL1jRs",
+        authDomain       : "tic-tac-toe-a06cb.firebaseapp.com",
+        databaseURL      : "https://tic-tac-toe-a06cb.firebaseio.com",
+        storageBucket    : "tic-tac-toe-a06cb.appspot.com",
+        messagingSenderId: "248671105051"
+    };
+    firebase.initializeApp(config);
+</script>
+
+<script src="/js/functions.js"></script>
+<script src="/js/script.js"></script>
+<script src="/js/logic.js"></script>
+</body>
 </html>
