--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -8,40 +8,39 @@
 
     <title>Tic Tac Toe</title>
 
-    <link href="https://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  </head>
+    <link href="//v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+</head>
 
-  <body>
-    <div class="container">
-		<div id="errorMessage"></div>
-		Let the game begin
-		<br>
-		
-		<button id="fbLogin">Login with facebook</button>
-		<button id="fbLogout">Logout</button>
-    </div>
+<body>
+<div class="container">
+    <div id="errorMessage"></div>
+    Let the game begin
+    <br>
 
-    <script src="//vehiclehistory-yzrzbhxxt2s5c.netdna-ssl.com/common/js/jquery-1.11.3.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" crossorigin="anonymous"></script>
-    <script src="https://v4-alpha.getbootstrap.com/dist/js/bootstrap.min.js"></script>
-    <script src="https://v4-alpha.getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
-	
-	<script src="https://www.gstatic.com/firebasejs/3.6.7/firebase.js"></script>
-	<script>
-	  // Initialize Firebase
-	  var config = {
-		apiKey           : "AIzaSyDSIPXFBGhvzLaRTMLvWu0l-UBqnfL1jRs",
-		authDomain       : "tic-tac-toe-a06cb.firebaseapp.com",
-		databaseURL      : "https://tic-tac-toe-a06cb.firebaseio.com",
-		storageBucket    : "tic-tac-toe-a06cb.appspot.com",
-		messagingSenderId: "248671105051"
-	  };
-	  firebase.initializeApp(config);
-	</script>
-	
-    <script src="/js/functions.js"></script>
-    <script src="/js/script.js"></script>
+    <button id="fbLogin">Login with facebook</button>
+    <button id="fbLogout">Logout</button>
+</div>
 
-  </body>
+<script src="//vehiclehistory-yzrzbhxxt2s5c.netdna-ssl.com/common/js/jquery-1.11.3.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" crossorigin="anonymous"></script>
+<script src="//v4-alpha.getbootstrap.com/dist/js/bootstrap.min.js"></script>
+<script src="//v4-alpha.getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+<script src="//www.gstatic.com/firebasejs/3.6.7/firebase.js"></script>
+<script>
+    // Initialize Firebase
+    var config = {
+        apiKey           : "AIzaSyDSIPXFBGhvzLaRTMLvWu0l-UBqnfL1jRs",
+        authDomain       : "tic-tac-toe-a06cb.firebaseapp.com",
+        databaseURL      : "https://tic-tac-toe-a06cb.firebaseio.com",
+        storageBucket    : "tic-tac-toe-a06cb.appspot.com",
+        messagingSenderId: "248671105051"
+    };
+    firebase.initializeApp(config);
+</script>
+
+<script src="/js/functions.js"></script>
+<script src="/js/script.js"></script>
+
+</body>
 </html>
