--- a/game.html
+++ b/game.html
@@ -55,7 +55,7 @@
         </div>
     </div>
     <hr>
-    <div class="progress">
+    <div class="progress" id="progressBar">
         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%; height: 20px;"><span>Looking for a game..</span></div>
     </div>
     <br>
